--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Boxception</title>
 </head>
 <body>
-    <h1 id="title">Boxception (div Version)</h1>
+    <h1 class="title">Boxception (div Version)</h1>
 
     <div id="box">
 
@@ -17,7 +17,18 @@
                 <div id="one"></div>
             </div>
         </div>
-        
+
     </div>
+    <br />
+    
+    <h1 class="title">Boxception (table Version)</h1>
+
+    <table id="tableception">
+        <tr> <td class="top-left tbl-three"></td>     <td class="top tbl-three"></td>           <td class="top tbl-three"></td>         <td class="top tbl-three"></td>             <td class="top-right tbl-three"></td> </tr>
+        <tr> <td class="left tbl-three"></td>         <td class="top-left tbl-two"></td>        <td class="top tbl-two"></td>           <td class="top-right tbl-two"></td>         <td class="right tbl-three"></td> </tr>
+        <tr> <td class="left tbl-three"></td>         <td class="left tbl-two"></td>            <td id="middle"></td>                   <td class="right tbl-two"></td>             <td class="right tbl-three"></td> </tr>
+        <tr> <td class="left tbl-three"></td>         <td class="bottom-left tbl-two"></td>     <td class="bottom tbl-two"></td>        <td class="bottom-right tbl-two"></td>      <td class="right tbl-three"></td> </tr>
+        <tr> <td class="bottom-left tbl-three"></td>  <td class="bottom tbl-three"></td>        <td class="bottom tbl-three"></td>      <td class="bottom tbl-three"></td>          <td class="bottom-right tbl-three"></td> </tr>
+    </table>
 </body>
 </html>
